# preconf_analytics_duckdb

./: README.md  explore.ipynb  pyproject.toml
pipe/: data_processing.py  query_commits.py
