[project]
name = "preconf-analytics-duckdb"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Evan-Kim2028", email = "ekcopersonal@gmail.com" }
]
dependencies = [
    "polars>=1.9.0",
    "duckdb>=1.1.2",
    "altair>=5.4.1",
    "hypermanager>=0.1.5",
    "marimo>=0.9.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/preconf_analytics_duckdb"]
